# Trabalho-ED-2

./: .gitignore  CMakeLists.txt  ProductReview.h  README.md  Review.h  compiler.sh  main.cpp
files/: Info.md  aaa.txt  nonbinary.txt  reviewsDesc.txt  reviewsOrig.txt  saida.txt  test.csv
include/: ArvoreB.h  ArvoreVP.h  List.h  Multinode.h  No.h  NoVP.h  Node.h  ProductReview.h  Review.h  Reviews.h  compressao.h  func.h  hash.h  huffman.h  preArvore.h  reader.h  sort.h
src/: ArvoreB.cpp  ArvoreVP.cpp  List.cpp  Multinode.cpp  ProductReview.cpp  Review.cpp  Reviews.cpp  huffman.cpp  main.cpp  main2.cpp  main3.cpp  reader.cpp
tests/: CMakeLists.txt  radixsort.cc
